--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "web3": "^1.8.1"
   },
   "scripts": {
-    "lottery": "react-scripts start",
+    "portfolio": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
